[workspace]
members = ["kic-script-gen", "script-aggregator", "script-gen-manager", "xml-handler"]
resolver = "2"

[workspace.package]
#TODO

[workspace.dependencies]
anyhow = "1.0.81"
quick-xml = "0.36.0"
thiserror = "1.0.58"
xml-handler = {path = "xml-handler"}
script-gen-manager = {path = "script-gen-manager"}
script-aggregator = {path = "script-aggregator"}
tsp-toolkit-kic-lib = { git = "https://github.com/tektronix/tsp-toolkit-kic-lib.git", tag = "v0.17.2-1" }

[workspace.lints.rust]
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)'] }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
undocumented_unsafe_blocks = "deny"
arithmetic_side_effects = "deny"

[workspace.lints.rustdoc]
all = "warn"
missing_doc_code_examples = "warn"
