[package]
name = "kic-script-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
xml-handler = { workspace = true }
script-gen-manager = { workspace = true }
actix-web = "4.9.0"
actix-files = "0.6"
actix-cors = "0.6"
actix-ws = "0.3.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"