[package]
name = "script-gen-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
xml-handler = { workspace = true }
script-aggregator = { workspace = true }
tsp-toolkit-kic-lib = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = "0.11.3"
phf_macros = "0.10"
uuid = { version = "1.3", features = ["v4"] }